assert-struct/tests/snapshots/option__option_with_comparison.snap
---
source: assert-struct/tests/option.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/option_errors/option_with_comparison.rs:13:21
   |
13 |         value: Some(> 30),
   |                     ^^^^ got 25
